<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/exButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicit_intents"
        app:layout_constraintBottom_toTopOf="@id/imButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <Button
        android:id="@+id/imButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intents"
        app:layout_constraintBottom_toBottomOf="@id/cmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exButton" />

    <Button
        android:id="@+id/cmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_intents"
        app:layout_constraintBottom_toBottomOf="@id/reButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imButton" />

    <Button
        android:id="@+id/reButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_intent"
        app:layout_constraintBottom_toBottomOf="@id/re2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cmButton" />

    <Button
        android:id="@+id/re2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contract_intent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reButton" />

</androidx.constraintlayout.widget.ConstraintLayout>